# dependent-graph

./: dependent-graph.cabal
src/Data/Dependent/: Graph.hs
src/Data/Dependent/Graph/: Inductive.hs
